--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,6 @@
-# LLM Environment variables
+# Reasoning LLM Configuration (for complex analytical tasks)
+REASONING_MODEL=gemini-2.0-flash
+GEMINI_API_KEY=your_gemini_api_key
 
-# Reasoning LLM (for complex reasoning tasks)
-REASONING_API_KEY=sk-xxx
-REASONING_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
-REASONING_MODEL=qwq-plus
-
-# Non-reasoning LLM (for straightforward tasks)
-BASIC_API_KEY=sk-xxx
-BASIC_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
-BASIC_MODEL=qwen-max-latest
-
-# Vision-language LLM (for tasks requiring visual understanding)
-VL_API_KEY=sk-xxx
-VL_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
-VL_MODEL=qwen2.5-vl-72b-instruct
-
-# Application Settings
-DEBUG=True
-APP_ENV=development
-
-# Add other environment variables as needed
-TAVILY_API_KEY=tvly-xxx
-# CHROME_INSTANCE_PATH=/Applications/Google Chrome.app/Contents/MacOS/Google Chrome
+# Tool API Keys
+TAVILY_API_KEY=your_tavily_api_key
